--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 			<a id="metric-time" class="anchor" href="#metric-time" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Metric Time</h1>
 
 			<p>This android application provides a widget for your home screen that shows the current time in Metric Time (Decimal Time). You can read more about this time format here <a href="https://en.wikipedia.org/wiki/Decimal_time">https://en.wikipedia.org/wiki/Decimal_time</a>.</p>
-
+			<a href="https://f-droid.org/app/com.mathi_amorim.emmanuel.metrictime"><img src="https://f-droid.org/badge/get-it-on.png" alt="Get it on F-Droid" height="80"></a>
+			
 			<p>The current time in metric time is: <div id="clock"/>.</p>
       </section>
     </div>
